# trackforge

./: LICENSE  README.md  docker-stack.yaml
.github/workflows/: cicd.yaml
api/: .gitignore  Dockerfile  Makefile  main.py  pyproject.toml
api/src/: config.py  test_config.py
api/src/elevation/: __init__.py  test_elevation.py
client/: Dockerfile  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
client/src/: app.css  app.html
client/src/components/atoms/icons/: Download.svelte  View.svelte  types.ts
client/src/components/molecules/: MeshViewer.svelte
client/src/lib/: scene.ts
client/src/routes/: +page.svelte  page.svelte.test.ts
